node-postgres-redis/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-postgres-redis
  labels:
    app.kubernetes.io/name: node-postgres-redis
spec:
  selector:
    app.kubernetes.io/name: node-postgres-redis
  ports:
    - name: http
      port: 3000
      targetPort: 3000
